--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,14 @@ dependencies {
     //dependency
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation 'com.google.firebase:firebase-database:16.0.4'
+//    implementation 'com.google.firebase:firebase-ml-vision:22.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+
+    //Libraries
+//    implementation 'com.karumi: dexter: 5.0.0'
+//    implementation 'com.otaliastudioa : cameraview: 2.0.0-rcl'
 
 }
